2006-10-17  Akim Demaille  <demaille@gostai.com>

	Fix libport-ci.
	* build-aux.mk: Fix.

2006-10-17  SIGOURE Benoit  <sigoure.benoit@lrde.epita.fr>

	r49: Handle more suffixes.

	* autotroll.mk: Handle .cc, .cxx, .C (along with .cpp).

2006-10-17  Akim Demaille  <demaille@gostai.com>

	Use config, add version.hh.in.
	* version.hh.in: New.
	* revision.mk: Adjust.
	* README: Document it.
	* urbi-engine.m4: Build sdk/config.h.

2006-10-16  Akim Demaille  <demaille@gostai.com>

	Don't point to the install kernel when compiling the kernel.
	* urbi-dirs.m4: Fix that.

2006-10-16  Akim Demaille  <akim.demaille@free.fr>

	Fix svn-externals.
	* svn-externals: Correctly remove the option when calling
	svn_externals_update.

2006-10-16  Akim Demaille  <akim.demaille@free.fr>

	install-sh -C.
	* install-sh: Support -C.
	The point is to avoid install urbi headers over and over
	again, to avoid useless recompilations.
	* bootstrap: Protect install-sh from being overriden by
	Automake's.

2006-10-16  Akim Demaille  <akim.demaille@free.fr>

	Add original install-sh.
	* install-sh: New.

2006-10-15  Akim Demaille  <demaille@gostai.com>

	* svn-externals: Add missing fi.

2006-10-10  Akim Demaille  <demaille@gostai.com>

	svn-externals --upgrade=DIR.
	* svn-externals: Support an argument for --upgrade.
	* build-aux.mk (baux-up): Upgrade just build-aux.

2006-10-09  Akim Demaille  <akim@lrde.epita.fr>

	Add baux-pin.
	* build-aux.mk (baux-pin): New.

2006-10-09  Akim Demaille  <akim@lrde.epita.fr>

	bootstrap makes.
	* bootstrap: Re-make if possible.

2006-10-09  Akim Demaille  <akim@lrde.epita.fr>

	build-aux.mk.
	* build-aux.mk: New.

2006-10-09  Akim Demaille  <akim@lrde.epita.fr>

	svn-externals.
	* svn-externals: New.

2006-10-06  Akim Demaille  <akim@lrde.epita.fr>

	Use an initialized CLEANFILES.
	* revision.mk: Do that.

2006-10-06  Akim Demaille  <akim@lrde.epita.fr>

	bison++ overhaul.
	* bison++.in: No longer ask for a "srcdir", rather rely on the